<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Instructions-->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <!--statistics-->

    <!--Displays the played hand-->
    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvVS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock"
        android:contentDescription="@string/computer_action" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVS"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock"
        android:contentDescription="@string/player_action" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_s"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/ivPlayer"
        app:layout_constraintEnd_toStartOf="@id/ivPlayer"
        app:layout_constraintStart_toEndOf="@id/ivComputer"
        app:layout_constraintTop_toTopOf="@id/ivComputer" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/computer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/ivComputer"
        app:layout_constraintStart_toStartOf="@id/ivComputer"
        app:layout_constraintTop_toBottomOf="@id/ivComputer" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/ivPlayer"
        app:layout_constraintStart_toStartOf="@id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@id/ivPlayer" />

    <!--Buttons used to play the game-->
    <ImageButton
        android:id="@+id/btnPlayRock"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/press_to_play_rock"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPlayPaper"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/btnPlayPaper"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/press_to_play_paper"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPlayScissor"
        app:layout_constraintStart_toEndOf="@id/btnPlayRock"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/btnPlayScissor"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/press_to_play_paper"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayPaper"
        app:srcCompat="@drawable/scissors" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvVS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWLDRatio"/>

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/tvWLDRatio"/>

    <TextView
        android:id="@+id/tvWLDRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/win_loss_draw_ratio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

</androidx.constraintlayout.widget.ConstraintLayout>